# changedetector

./: .env.example  .gitignore  README.md  changedetector-tray.bat  config.example.yaml  pause.bat  pyproject.toml  resume.bat  run-hidden.bat
src/changedetector/: __init__.py  capture.py  cli.py  config.py  control.py  detector.py  dpi.py  geometry.py  launcher.py  logging_setup.py  overlay.py  profiles.py  runner.py  selector.py  telegram_commands.py  tray.py
src/changedetector/notifier/: __init__.py  console.py  telegram.py
tests/: test_capture.py  test_cli.py  test_config.py  test_control.py  test_detector.py  test_geometry.py  test_launcher.py  test_overlay.py  test_profiles.py  test_runner.py  test_telegram.py  test_telegram_commands.py  test_tray.py
