[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "changedetector"
version = "0.1.0"
description = "Headless screen-region change detector with Telegram alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0",
    "numpy>=1.24",
    "Pillow>=10.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
changedetector = "changedetector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
